socialNetwork/k8s-yaml/home-timeline-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-timeline-redis
  labels:
    death-star-project: social-network
    app-name: home-timeline-redis
  namespace: social-network
spec:
  ports:
  - port: 6379
    name: redis
  selector:
    death-star-project: social-network
    app-name: compose-post-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: home-timeline-redis
  labels:
    death-star-project: social-network
    app-name: home-timeline-redis
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: home-timeline-redis
  template:
    metadata:
      annotations:
        io.cilium.proxy-visibility: "<Egress/9090/TCP/HTTP>,<Egress/6379/TCP/REDIS>,<Egress/11211/TCP/MEMCACHED>,<Egress/27107/TCP/MONGODB>,<Egress/5672/TCP/RABBITMQ>,<Ingress/9090/TCP/HTTP>,<Ingress/6379/TCP/REDIS>,<Ingress/11211/TCP/MEMCACHED>,<Ingress/27017/TCP/MONGODB>,<Ingress/5672/TCP/RABBITMQ>"

      labels: 
        death-star-project: social-network
        app-name: home-timeline-redis
        INPUT1: home-timeline-service
        INPUT2: write-home-timeline-service
        INPUT3: social-graph-service
      name: home-timeline-redis
    spec:
      containers:
      - name: home-timeline-redis
        image: redis:alpine
        resources: 
          requests: 
            cpu: "5m"
            memory: "20Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
