socialNetwork/k8s-yaml/jaeger.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-out
  labels:
    death-star-project: social-network
    app-name: jaeger
  namespace: social-network
spec:
  type: NodePort
  ports:
  - port: 16686
  selector:
    death-star-project: social-network
    app-name: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    death-star-project: social-network
    app-name: jaeger
  namespace: social-network
spec:
  ports:
  - port: 5775
    name: udp1
    protocol: UDP
  - port: 5778
    name: tcp1
  - port: 6831
    name: udp2
    protocol: UDP
  - port: 6832
    name: udp3
    protocol: UDP
  - port: 14250
    name: tcp2
  - port: 14268
    name: tcp3
  selector:
    death-star-project: social-network
    app-name: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    death-star-project: social-network
    app-name: jaeger
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: jaeger
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: jaeger
      name: jaeger
    spec:
      containers:
      - name: jaeger
        image: poanpan/jaegertracing:v1
        resources: 
          requests: 
            cpu: "1000m"
            memory: "3Gi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
