socialNetwork/k8s-yaml/media-memcached.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: media-memcached
  labels:
    death-star-project: social-network
    app-name: media-memcached
  namespace: social-network
spec:
  ports:
  - port: 11211
    name: tcp
  selector:
    death-star-project: social-network
    app-name: media-memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
    #annotations:
    #"sidecar.jaegertracing.io/inject": "true"
  name: media-memcached
  labels:
    death-star-project: social-network
    app-name: media-memcached
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: media-memcached
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: media-memcached
      name: media-memcached
    spec:
      containers:
      - name: media-memcached
        image: poanpan/memcached:v1
        resources: 
          requests: 
            cpu: "10m"
            memory: "10Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
