socialNetwork/k8s-yaml/media-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: media-service
  labels:
    death-star-project: social-network
    app-name: media-service
  namespace: social-network
spec:
  ports:
  - port: 9090
    name: http
  selector:
    death-star-project: social-network
    app-name: media-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    #annotations:
    #"sidecar.jaegertracing.io/inject": "true"
  name: media-service
  labels:
    death-star-project: social-network
    app-name: media-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: media-service
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: media-service
        OUTPUT: compose-post-service
        INPUT: nginx-thrift
      name: media-service
    spec:
      containers:
      - name: media-service
        image: poanpan/social-network-microservices-local-jaeger:v0.0.1
        command: ["MediaService"]
        resources: 
          requests: 
            cpu: "600m"
            memory: "30Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
