socialNetwork/k8s-yaml/nginx-thrift.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-thrift
  labels:
    death-star-project: social-network
    app-name: nginx-thrift
  namespace: social-network
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    death-star-project: social-network
    app-name: nginx-thrift
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-thrift
  labels:
    death-star-project: social-network
    app-name: nginx-thrift
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: nginx-thrift
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: nginx-thrift
        OUTPUT1: social-graph-service
        OUTPUT2: text-service
        OUTPUT3: media-service
        OUTPUT4: home-timeline-service
        OUTPUT5: user-service
        OUTPUT6: unique-id-service
        OUTPUT7: user-timeline-service
      name: nginx-thrift
    spec:
      containers:
      - name: nginx-thrift
        image: yg397/openresty-thrift:xenial
        ports: 
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/local/openresty/nginx/lua-scripts
          name: lua-scripts
        - mountPath: /usr/local/openresty/nginx/pages
          name: pages
        - mountPath: /usr/local/openresty/nginx/conf/nginx.conf
          name: nginx-conf
        - mountPath: /usr/local/openresty/nginx/jaeger-config.json
          name: jaeger-config-json
        - mountPath: /gen-lua
          name: gen-lua
      restartPolicy: Always
      volumes:
      - name: lua-scripts
        hostPath: 
          path: /root/DeathStarBench/socialNetwork/nginx-web-server/lua-scripts-k8s
          type: Directory
      - name: pages
        hostPath: 
          path: /root/DeathStarBench/socialNetwork/nginx-web-server/pages
          type: Directory
      - name: nginx-conf
        hostPath: 
          path: /root/DeathStarBench/socialNetwork/nginx-web-server/conf/nginx-k8s.conf
          type: File
      - name: jaeger-config-json
        hostPath: 
          path: /root/DeathStarBench/socialNetwork/nginx-web-server/jaeger-config.json
          type: File
      - name: gen-lua
        hostPath: 
          path: /root/DeathStarBench/socialNetwork/gen-lua
          type: Directory
      # nodeName: 10.0.0.13
      schedulerName: poseidon
