socialNetwork/k8s-yaml/post-storage-mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: post-storage-mongodb
  labels:
    death-star-project: social-network
    app-name: post-storage-mongodb
  namespace: social-network
spec:
  ports:
  - port: 27017
    name: mango
  selector:
    death-star-project: social-network
    app-name: post-storage-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
    #annotations:
    #"sidecar.jaegertracing.io/inject": "true"
  name: post-storage-mongodb
  labels:
    death-star-project: social-network
    app-name: post-storage-mongodb
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: post-storage-mongodb
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: post-storage-mongodb
        INPUT: post-storage-service
      name: post-storage-mongodb
    spec:
      containers:
      - name: post-storage-mongodb
        image: poanpan/mongo:v1
        resources: 
          requests: 
            cpu: "400m"
            memory: "3Gi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
