socialNetwork/k8s-yaml/social-graph-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: social-graph-redis
  labels:
    death-star-project: social-network
    app-name: social-graph-redis
  namespace: social-network
spec:
  ports:
  - port: 6379
    name: redis
  selector:
    death-star-project: social-network
    app-name: social-graph-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: social-graph-redis
  labels:
    death-star-project: social-network
    app-name: social-graph-redis
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: social-graph-redis
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: social-graph-redis
        INPUT: social-graph-service
      name: social-graph-redis
    spec:
      containers:
      - name: social-graph-redis
        image: redis:alpine
        resources: 
          requests: 
            cpu: "200m"
            memory: "20Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
