socialNetwork/k8s-yaml/text-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: text-service
  labels:
    death-star-project: social-network
    app-name: text-service
  namespace: social-network
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: social-network
    app-name: text-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-service
  labels:
    death-star-project: social-network
    app-name: text-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: text-service
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: text-service
        OUTPUT1: url-shorten-service
        OUTPUT2: user-mention-service
        OUTPUT3: compose-post-service
        INPUT: nginx-thrift
      name: text-service
    spec:
      containers:
      - name: text-service
        image: poanpan/social-network-microservices:v1
        command: ["TextService"]
      restartPolicy: Always
      # nodeName: 10.0.0.13
      schedulerName: poseidon
