socialNetwork/k8s-yaml/unique-id-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unique-id-service
  labels:
    death-star-project: social-network
    app-name: unique-id-service
  namespace: social-network
spec:
  ports:
  - port: 9090
    name: tcp
  selector:
    death-star-project: social-network
    app-name: unique-id-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: unique-id-service
  labels:
    death-star-project: social-network
    app-name: unique-id-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: unique-id-service
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: unique-id-service
        OUTPUT: compose-post-service
        INPUT: nginx-thrift
      name: unique-id-service
    spec:
      containers:
      - name: unique-id-service
        image: poanpan/social-network-microservices-local-jaeger:v0.0.1
        command: ["UniqueIdService"]
        resources: 
          requests: 
            cpu: "5m"
            memory: "70Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
