socialNetwork/k8s-yaml/url-shorten-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: url-shorten-service
  labels:
    death-star-project: social-network
    app-name: url-shorten-service
  namespace: social-network
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: social-network
    app-name: url-shorten-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shorten-service
  labels:
    death-star-project: social-network
    app-name: url-shorten-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: url-shorten-service
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: url-shorten-service
        OUTPUT1: url-shorten-mongodb
        OUTPUT2: compose-post-service
        INPUT: text-service
      name: url-shorten-service
    spec:
      containers:
      - name: url-shorten-service
        image: poanpan/social-network-microservices:v1
        command: ["UrlShortenService"]
      restartPolicy: Always
      # nodeName: 10.0.0.13
      schedulerName: poseidon
