socialNetwork/k8s-yaml/user-memcached.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-memcached
  labels:
    death-star-project: social-network
    app-name: user-memcached
spec:
  ports:
  - port: 11211
  selector:
    death-star-project: social-network
    app-name: user-memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-memcached
  labels:
    death-star-project: social-network
    app-name: user-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: user-memcached
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: user-memcached
      name: user-memcached
    spec:
      containers:
      - name: user-memcached
        image: memcached
      restartPolicy: Always
