socialNetwork/k8s-yaml/user-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    death-star-project: social-network
    app-name: user-service
  namespace: social-network
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: social-network
    app-name: user-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: user-service
  labels:
    death-star-project: social-network
    app-name: user-service
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: user-service
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: user-service
        OUTPUT1: social-graph-service
        OUTPUT2: user-mongodb
        OUTPUT3: user-memcached
        OUTPUT4: compose-post-service
        INPUT1: social-graph-service
        INPUT2: nginx-thrift
      name: user-service
    spec:
      containers:
      - name: user-service
        image: poanpan/social-network-microservices-local-jaeger:v0.0.1
        command: ["UserService"]
        resources: 
          requests: 
            cpu: "550m"
            memory: "40Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
