socialNetwork/k8s-yaml/user-timeline-mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-timeline-mongodb
  labels:
    death-star-project: social-network
    app-name: user-timeline-mongodb
spec:
  ports:
  - port: 27017
  selector:
    death-star-project: social-network
    app-name: user-timeline-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-timeline-mongodb
  labels:
    death-star-project: social-network
    app-name: user-timeline-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: user-timeline-mongodb
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: user-timeline-mongodb
      name: user-timeline-mongodb
    spec:
      containers:
      - name: user-timeline-mongodb
        image: mongo
      restartPolicy: Always
