socialNetwork/k8s-yaml/user-timeline-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-timeline-redis
  labels:
    death-star-project: social-network
    app-name: user-timeline-redis
  namespace: social-network
spec:
  ports:
  - port: 6379
  selector:
    death-star-project: social-network
    app-name: user-timeline-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-timeline-redis
  labels:
    death-star-project: social-network
    app-name: user-timeline-redis
  namespace: social-network
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: user-timeline-redis
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: user-timeline-redis
        INPUT: user-timeline-service
      name: user-timeline-redis
    spec:
      containers:
      - name: user-timeline-redis
        image: redis:alpine
        resources: 
          requests: 
            cpu: "150m"
            memory: "15Mi"
      restartPolicy: Always
      # nodeName: 10.0.0.13
      # schedulerName: poseidon
