socialNetwork/k8s-yaml/write-home-timeline-service.yaml
#     depends_on:
      # - write-home-timeline-rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: write-home-timeline-service
  labels:
    death-star-project: social-network
    app-name: write-home-timeline-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: social-network
    app-name: write-home-timeline-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-home-timeline-service
  labels:
    death-star-project: social-network
    app-name: write-home-timeline-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: social-network
      app-name: write-home-timeline-service
  template:
    metadata:
      labels: 
        death-star-project: social-network
        app-name: write-home-timeline-service
      name: write-home-timeline-service
    spec:
      containers:
      - name: write-home-timeline-service
        image: yg397/social-network-microservices
        command: ["WriteHomeTimelineService"]
      restartPolicy: Always
